app/assets/stylesheets/replies.scss
@import 'variables';

/* Box displaying current icon */
#icon-overlay {
  background-color: $bg_color_icon_overlay;
  height: 100px;
  width: 100px;
  position: absolute;
  top: 0;
  left: 15px;
  opacity: 0.4;
  display: none;
  cursor: pointer;
}

#current-icon-holder { position: relative; }

#current-icon-dropdown {
  color: $font_color_icon_selector;

  select {
    width: 100px;
    margin-bottom: 10px;
  }
}

/* Character selector */
.selector-popup-button {
  width: 14px;
  height: 14px;
  position: relative;
  top: 1px;
  cursor: pointer;
}

.selector-popup {
  position: absolute;
  top: 0;
  left: 150px;
  padding: 5px 20px 10px 20px;
  z-index: 2;
  background-color: $bg_color_selectionpopup;
  min-width: 250px;
  display: none;
  text-align: left;

  h4 {
    margin-bottom: 0;
    margin-top: 0;
    font-size: 90%;
  }
}

/* Icon selector */
#reply-icon-selector {
  display: none;
  position: absolute;
  top: 10px;
  left: 160px;
  min-height: 101px;
  padding: 10px;
  margin: 0;
  z-index: 4;
  background-color: $bg_color_icon_selector;

  img { cursor: pointer; }

  .gallery-icon {
    min-height: 130px;
    display: inline-block;
    text-align: center;
    line-height: 14px;
    margin-bottom: 10px;
    position: relative;
    width: 130px;
    word-wrap: break-word;
  }

  .gallery-name {
    font-weight: bold;
    margin-bottom: 5px;
    margin-left: 10px;
  }
}
@media (max-width: 700px) {
  #reply-icon-selector { left: 0; }
}

.icon-holder .icon { margin: 0; }

.icon {
  position: relative;
  max-width: 100px;
  max-height: 100px;
  margin: 5px;
}

/* Main content headers */
#post-privacy {
  float: right;
  line-height: 24px;
  margin-right: 2px;
}

.post-subheader, .post-navheader {
  font-size: $font_size_smallish;

  span { line-height: 14px; }
}

div.post-subheader { width: 100%; }

.post-subheader {
  padding: 10px;
  background-color: $bg_color_post_description;
  color: $font_color_post_description;
}

.post-navheader {
  padding: 10px;
  overflow: hidden;
  background-color: $bg_color_navheader;

  .view-button { background-color: $bg_color_navbutton; }
}

.post-expander {
  min-height: 5px;
  background-color: $bg_color_expander;
  padding: 0;

  .info {
    padding: 5px;
    text-align: center;
    font-size: $font_size_small;
    cursor: pointer;
  }
}

.post-ender {
  min-height: 5px;
  padding: 5px;
  background-color: $bg_color_ender_post;
  color: $font_color_ender_post;
  font-size: $font_size_main;
  font-weight: bold;
  text-align: center;
}

/* Written content */
/* - Blockquotes */
/* -- Color on even/odd background */
.even, .post-post, .post-reply:nth-child(even) {
  blockquote { background-color: calculate-transparent-color($bg_color_even, $bg_color_odd, $opacity_blockquote); }
}

.odd, .post-reply:nth-child(odd) {
  blockquote { background-color: calculate-transparent-color($bg_color_odd, $bg_color_even, $opacity_blockquote); }
}

.single-description blockquote { background-color: rgba($bg_color_descriptions_blockquote, 0.3); }

.post-content, .written-content, .message-content {
  blockquote {
    margin: 0.5em 1.5em;
    padding: 0.5em;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  // in self and in nested blockquotes
  &, blockquote {
    // remove paragraph margins at boundaries
    & > p:first-child { margin-top: 0; }
    & > p:last-child { margin-bottom: 0; }
  }
}

/* Post-specific content & editor */
#content > .post-container, .flat-post-replies .post-container {
  padding: 0;
  overflow: auto;
  break-inside: avoid;
}

.post-edit-box {
  float: right;
  margin-left: 10px;
  margin-bottom: 5px;
  padding: 5px;
}

.post-info-box {
  text-align: center;
  padding: 0;
  float: left;
  margin-right: 10px;
  margin-bottom: 5px;
  width: 150px;
  overflow: visible;
  overflow-wrap: break-word;
}

.post-icon, #current-icon-dropdown { background-color: $bg_color_post_icon; }

.post-icon {
  padding: 0;
  height: 120px;

  img, div {
    margin-top: 10px;
    margin-right: 10px;
    margin-left: 10px;
  }

  img {
    margin-bottom: 10px;
    vertical-align: middle;
  }
}

.post-character {
  background-color: $bg_color_post_character;
  color: $font_color_post_info;
  padding: 4px;
  position: relative;
}

.post-screenname {
  background-color: $bg_color_post_screenname;
  color: $font_color_post_screenname;
  padding: 4px;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.post-author {
  padding: 5px;
  background-color: $bg_color_post_author;
  color: $font_color_post_info;
  position: relative;
}

.post-footer {
  padding: 0;
  clear: both;

  .right-align {
    width: 100%;
    font-size: $font_size_small;
  }
}

.per-page {
  margin-top: 5px;
  margin-bottom: 5px;
}

#post_content, #reply_content, #user_profile {
  width: 100%;
  display: block;
}

#reply_content, #user_profile {
  height: 130px;
  box-sizing: content-box;
}

#post_content { height: 312px; }

#post-form-wrapper {
  margin-top: 5px;
  margin-left: 160px;
  margin-right: 10px;
  background-image: url(image-path('icons/loading.gif')); /* stylelint-disable-line function-url-quotes */
  background-position: 50% 30%;
  background-size: 30px;
  background-repeat: no-repeat;
}

#post-editor { position: relative; }

#post_form {
  label {
    margin-left: 5px;
    min-width: 155px;
    display: inline-block;
    &.no-margin { margin-left: 0; }
  }

  .subber { padding: 10px; }

  #post-editor {
    input[type='text'] { width: 250px; }
    label { min-width: 95px; }
  }

  input[type='checkbox'] {
    margin-left: 5px;
    position: relative;
    bottom: 2px;
  }

  #current_authors a {
    margin: 5px 0;
    display: inline-block;
  }

  #post_private_note {
    width: 100%;
    height: 100px;
  }
}

.private-note-editor {
  #post_private_note {
    width: 100%;
    height: calc(100% - 50px);
  }
}

.loading {
  width: 16px;
  height: 16px;
}

.post-note-editor { margin: 5px; }

.details {
  display: inline;
  font-size: $font_size_smaller;
  font-style: italic;
}

.post-content {
  /* - Blockquotes around .post-info-box */
  blockquote {
    margin-left: 5.5em;
    margin-right: 5.5em;
  }

  /* - Lists around .post-info-box */
  ul, ol {
    list-style-position: inside;
    padding-left: 30px;

    ul, ol { overflow: auto; }
  }

  /* - Tables in post-content */
  th, td {
    border: 1px solid $border_color_reply_table;
    padding: 5px;
  }
}
#post-editor .clear { height: 1px; }

/* - Character quick switcher - small icons for selecting characters in post-editor */
.char-access-icon {
  height: 30px;
  width: 30px;
  float: left;
}

.char-access-fake {
  padding: 5px 0;
  font-size: 80%;
  background-color: $font_color_char_switcher;
  background-color: rgba($font_color_char_switcher_alpha, 0.3);
}

/* - Narrow window display */
@media (max-width: 600px) {
  .post-info-box {
    float: none;
    width: 100%;
    display: inline-block;
  }

  .post-icon {
    float: left;
    margin-right: 0;
    margin-bottom: 5px;
  }

  .post-info-text {
    float: left;
    margin-right: 10px;
    margin-bottom: 5px;
  }

  #post-form-wrapper { margin-left: 0; }
  #character-selector { left: 0; }
  .post-character { background-color: $bg_color_post_character_narrow; }
  .post-author { background-color: $bg_color_post_author_narrow; }

  .post-content blockquote {
    margin-left: 1.5em;
    margin-right: 1.5em;
  }
}

// TODO: fix this properly, this is a hack
@media (max-width: 600px) {
  #post-form-wrapper { clear: both; }
}

/* Pagination */
.pagination {
  font-size: $font_size_small;
  padding: 5px;
  display: inline-block;

  .current {
    font-weight: bold;
    font-style: normal;
    background-color: $bg_color_paginate_current_page;
  }

  a, .current, .disabled {
    display: inline-block;
    padding: 5px 10px;
  }

  .disabled {
    color: $font_color_paginate_link_disabled;
    text-align: left;
  }

  a {
    color: $font_color_paginate_link;
    &:hover { background-color: $bg_color_paginate_link_hover; }
    &:visited { color: $font_color_paginate_link_visited; }
  }

  .summary {
    padding-left: 10px;
    padding-right: 10px;
  }
}

.paginator {
  color: $font_color_paginate;

  .left-align {
    float: left;
    padding: 10px;
  }

  .right-align {
    padding: 2px;
    padding-right: 10px;
    float: right;
    a { color: $font_color_paginate; }
  }

  .normal-pagination { display: block; }
  .mobile-pagination { display: none; }
}

@mixin mobile-paginator {
  padding: 0;

  .pagination {
    a, .disabled { padding: 5px; }

    .summary {
      padding-left: 5px;
      padding-right: 5px;
    }
  }
  .normal-pagination { display: none; }
  .mobile-pagination { display: block; }
}

.mobile-paginator {
  @include mobile-paginator;
}

@media (max-width: 400px) {
  .paginator-meta { display: none; }

  .paginator {
    @include mobile-paginator;
  }
}

/* Post dropdown menu */
#post-menu-holder { position: relative; }

#post-menu-box {
  text-align: left;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 99;
  color: $font_color_post_menu;
  background-color: $bg_color_post_menu;
  border-top: 1px solid $border_color_post_menu;

  div {
    padding: 10px 20px;
    border-bottom: 1px solid $border_color_post_menu;
  }

  a { color: $font_color_menu_link; }
  a:hover div { background-color: $bg_color_menu_link_hover; }

  img {
    margin-right: 3px;
    vertical-align: middle;
    margin-bottom: 4px;
  }
}

/* Handle post tables */
.post-completed {
  text-align: center;
  min-width: 50px;
  max-width: 70px;
  white-space: nowrap;
}

.post-check-box {
  width: 30px;
  padding-right: 10px;

  /* Keeps unread table from padding excessively for the checkboxes */
  input.checkbox {
    height: 13px;
    margin: 0px;
    vertical-align: middle;
  }
}
@media (pointer: coarse) {
  .mobile-target {
    display: inline-block;
    padding-bottom: 8px;
    padding-right: 8px;
  }
}

/* Unread marker on posts */
.unread-marker-container { position: relative; }

.unread-marker {
  background-color: transparent;
  color: transparent !important;
  position: absolute;
  top: -5px;
  font-size: 70%;
}

.reply-highlighted { border: 1px $border_color_unread_reply solid; }

/* Reply permalink read-position notice */
.permalink-read-notice {
  margin-bottom: 10px;

  .permalink-read-notice-message img { margin-right: 5px; }

  .permalink-read-notice-actions {
    margin-top: 8px;

    .link-box { margin-left: 10px; }
  }
}

/* History page */
.history-header { width: 170px; }

@media (max-width: 600px) {
  .history-header { width: 75px; }
}

.index-description p { margin: 0px; }

.mod {
  width: 100%;
  height: 50px;
}

/* Bookmark Edit Form */
.bookmark-editor-fields { margin-right: 20px; }
@media (max-width: 850px) {
  .bookmark-editor-fields, .bookmark-editor-buttons { display: block; margin-right: 0; }
}

